css/style.css
/* ... */
.experience h3 {
    margin-top: 0;
    margin-left: 20px;
    margin-bottom: 15px;
    width: max-content;
} 

.experience ul {
    width: max-content;
    list-style-type: "* ";
    line-height: 30px;
    margin: 0px;
    padding-left: 20x;
}

@media screen and (max-width: 840px) {

    #landing-section {
        width: unset;
        display: unset;
        flex-direction: unset;
        align-self: unset;
        box-shadow: unset;
        margin-top: unset;
    }

    #landing {
        max-height: 100vh;
        margin-top: unset;
        z-index: 10;
    }

    .content-frame .intro{ outline-style: unset;}

    .content.intro, .content.experience {
        width: 100%;
        padding: 15px;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    .section.index {
        margin-top: 50px;
    }

    .intro h1, .experience h3{
        margin: 10px;
    }

    .intro p1 {
        width: 80%;
        text-align: justify;
    }

 
    .experience h3 {
        font-size: 25px;  
        line-height: 25px;
    }

    .experience ul {
        width: max-content;
        padding-left: 13px;
    }

    .content.experience {
        margin: unset;
        padding: 10px unset;
    }

     .fa-solid.fa-arrow-down {
        color:#282525;
        display: flex;
        align-self: center;
        font-size: 6vh;
        margin: 35px auto;

    }

    .floating { 
        animation-name: floating;
        animation-duration: 3s;
        animation-iteration-count: infinite;
        animation-timing-function: ease-in-out;
        margin-left: 30px;
        margin-top: 5px;
    }
     
    @keyframes floating {
        0% { transform: translate(0,  0px); }
        50%  { transform: translate(0, 15px); }
        100%   { transform: translate(0, -0px); }   
    }

}

/*CASES*/

.content-frame .case{ 
    padding-bottom: 20px;
}

.content.post{
    display: flex;
    flex-direction: column;
    align-items: center;
}

.row-1 {
    display: flex;
    justify-content: space-between;
    margin: 20px 75px;
} 

.row-1 h2{
    width: max-content;
    flex: 2 1 40%
}


.row-1 p3 {
    margin-top: 20px;
    width: 70%;
    word-wrap: break-word;
    text-align: justify;
}
.case-type p3 {
    font-weight: 100;
}

.view-project {
    text-align: right;
    padding: 15px;
    margin: 0;
    font-weight: 400;

}

.content.extras .pics, .content.post .pics {
    padding: 25px 40px;
    width: auto;
    display: flex;        
    flex-wrap: wrap;
    justify-content: center;

}

.content.extras h2 {
    display: flex;
    flex-direction: column;
    margin-left: 75px;
    align-self: start;
}

/* TABS */
.tabs {
    height: 100%;
    margin: 0;
    display: flex;
    flex-direction: column;
}

.tablink {
    font-family: 'JetBrains Mono', monospace;
    background-color: #a19d8c;
    float: left;
    border: none;
    outline: none;
    text-align: center;
    cursor: pointer;
    padding: 20px 20px;
    font-size: 18px;
    width: 50%;
    position: relative;
    z-index: 4;
}

.tablink:hover {
    font-style: italic;
    text-decoration: none;
    font-weight: 500;
}

.tabcontent {
    display: none;
    height: 100%;
    flex-wrap: wrap;
    justify-content: center;
}

.buttons {
    display: flex;
    position: relative;
    z-index: 4;
}


#technical {background-color: #eae6d6;}

#creative {background-color: #eae6d6;}


.cases {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
 } 

.case.half{
    flex: 1 2 46%;
    padding: 25px 20px;
    outline-style: solid;
    outline-color:  #d7d3c0;
    outline-width: thin;
     
}

.content.half {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.case.half h2 {
    font-size: 25px;  
    text-align: center;
    padding: 0px 30px;
    margin-bottom: 0px;
}

.case.half .case-type p3{
    display: block;
    width: max-content;
    justify-self: center;
    margin: 5px auto 25px auto;

}

.case.half .view-project {
    width: max-content;
    margin: 10px auto;
    padding-bottom: 0;
    font-weight: 400;
}


.case .descrip { display: none;}

.case.post img {
    padding: 25px;
    width: 50%;
    height: auto;
}

.case.post .pics img {
    padding: 25px;
    width: 40%;
    height: auto;
}

.case.half .hor, .case.post .hor {
    width: 80%;
    display: flex;
    align-self: center;
    margin-left: auto;
    margin-right: auto;
    
}

.case.post .hor {
    width: 50%;
}



@media screen and (max-width: 840px) {

    .case.half img {
        padding-bottom: 30px;
    }

    .case.post img {
        max-height: 100%;
        width: 80%; 
        display: flex;
        align-items: center;
    }

    .case.post .pics img {
        max-height: 80%;
        width: 100%; 
        display: flex;
        align-items: center;
    }

    .content-frame .case{ 
        padding-bottom: unset;
    }
    
    .row-1 {
        display: flex;
        justify-content: center;
        flex-direction: column;
        align-content: center;
        margin: 0;
        text-align: center;
    } 
    
    
    .row-1 h2{
        width: max-content;
        flex: unset;
        align-self: center;
        margin-bottom: 0px;
        margin-top: 55px;
    }
    
    
    .row-1 p3 {
        margin-top: 15px;
        width: 85%;
        align-self: center;
    }
    .case-type p3 {
        font-weight: 100;
        
    }
    
    .view-project {
        text-align: right;
        padding: 30px 10px;
        margin: 0;
        font-weight: 400;
    }

    .content.case.half {
        height: fit-content;
        width: auto;
        justify-content: center;
        text-align: center;
    }


    .case .descrip { display: none;}

    .content.extras .pics {
        width: unset;
    }

    .content.extras h2 {
        align-self: center;
        margin-left: unset;
        text-align: center;
    }
}
/* ... */

